--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.4</version>
+                <version>0.0.3</version>
                 <configuration>
                     <mainClass>org.example.MainClass</mainClass>
                 </configuration>
@@ -85,5 +85,13 @@
                 </executions>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
     </build>
 </project>
