--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,1 @@
-/target/original-calculator-1.0-SNAPSHOT.jar
-/target/maven-status/
-/target/maven-archiver/
-/target/generated-sources/
-/target/classes/
+/target/
